tests/org.eclipse.php.core.tests/workspace/errors/php53/invalidAbstractMethod.pdtt
--TEST--
Bug 480280 - No error for non-abstract method with no body
--FILE--
<?php 
class MyClass1 {
    function foo1();

    abstract function foo2();

    abstract function foo3() {
    	exit();
    }
}

abstract class MyClass2 {
    function foo1();

    abstract function foo2() {
    	exit();
    }
}

interface MyInterface1 {

    function foo1();
    
    function foo2() {
        exit();
    }
}
?>
--EXPECT--
[line=5, start=37, end=41] This method requires a body instead of a semicolon
[line=7, start=13, end=21] The type MyClass1 must be an abstract class to define abstract methods
[line=7, start=68, end=72] The abstract method foo2 in type MyClass1 can only be defined by an abstract class
[line=10, start=13, end=21] The type MyClass1 must be an abstract class to define abstract methods
[line=10, start=99, end=103] Abstract methods do not specify a body
[line=10, start=99, end=103] The abstract method foo3 in type MyClass1 can only be defined by an abstract class
[line=15, start=169, end=173] This method requires a body instead of a semicolon
[line=18, start=200, end=204] Abstract methods do not specify a body
[line=27, start=296, end=300] Abstract methods do not specify a body
